Install TPM simulator in travis jobs and use it during tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: go
 
+install:
+  - sudo snap install core core18
+  - sudo snap install --edge tpm2-simulator-chrisccoulson
+  - ./get-deps
 script:
-  - go test -v -race ./...
+  - ./run-tests --with-mssim
   - go vet ./...
