--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: go
 
 install:
+  - sudo apt install sbsigntool
   - sudo snap install core core18
   - sudo snap install --edge tpm2-simulator-chrisccoulson
   - ./get-deps
