--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 language: go
 
 install:
-  - sudo apt install sbsigntool
+  - sudo apt-get update
+  - sudo apt-get install -y sbsigntool
   - sudo snap install core core18
   - sudo snap install --edge tpm2-simulator-chrisccoulson
   - ./get-deps
