--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 examples/change-pin/change-pin
+examples/fetch-intermediates/fetch-intermediates
 examples/provision-status/provision-status
 examples/provision-tpm/provision-tpm
 examples/seal-key/seal-key
