Rename unlock to ubuntu-core-cryptsetup and make the interface more like systemd-cryptsetup

--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,5 @@ examples/provision-tpm/provision-tpm
 examples/seal-key/seal-key
 examples/unseal-key/unseal-key
 examples/verify-tpm/verify-tpm
-unlock/unlock
+ubuntu-core-cryptsetup/ubuntu-core-cryptsetup
 vendor/*/
